# llm-tools-browser-history

./: .gitignore  .nvimrc  AGENTS.md  Makefile  README.md  pyproject.toml
browser_history/: chrome.py  default_whitelist.yaml  firefox.py  mcp_server.py  qp_whitelist.py  safari.py  sqlite.py  toolbox.py  types.py
docs/: MCP_SETUP.md
docs/adr/: 0001-python-project.md  0002-browser-tool.md  0003-normalized-sql-interface.md  0004-mcp-standalone-service.md
docs/plans/: 2026-01-21-log-level-design.md  2026-01-21-log-level-implementation.md
tests/: test_foo.py  test_mcp_cli.py  test_qp_whitelist.py  test_sqlite.py
tests/fixtures/: chrome-places.db  firefox-places.db  safari-places.db
